wsn/projects/dicio/node/out.txt


-------- begin --------
avr-gcc (GCC) 4.9.1
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


Compiling: ../../../projects/dicio/utility/adc.c
avr-gcc -g -c -mmcu=atmega128rfa1 -Os -I. -g -D NANORK -D NODE_ADDR=0 -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums -Wall -Wa,-adhlns=../../../projects/dicio/utility/adc.lst -I../../../src/net/bmac -I../../../src/platform/firefly3/include -I../../../projects/dicio/utility -I../../../projects/dicio/drivers -I../../../src/platform/include -I../../../src/platform/firefly3/include -I../../../src/radio/rf231_soc/include -I../../../src/radio/rf231_soc/hal/atmega128rfa1 -I../../../src/radio/rf231_soc/platform/firefly3 -I../../../src/drivers/include -I../../../src/drivers/platform/firefly3/include -I../../../src/kernel/include -I../../../src/kernel/hal/include -std=gnu99 -fgnu89-inline -DCC2420DB ../../../projects/dicio/utility/adc.c -o ../../../projects/dicio/utility/adc.o
In file included from ../../../src/platform/include/ulib.h:32:0,
                 from ../../../src/kernel/include/nrk_time.h:33,
                 from ../../../src/kernel/include/nrk.h:38,
                 from ../../../projects/dicio/utility/type_defs.h:13,
                 from ../../../projects/dicio/utility/adc.h:12,
                 from ../../../projects/dicio/utility/adc.c:9:
../../../src/platform/firefly3/include/nrk_pin_define.h:126:0: warning: "ANT_0" redefined
 #define ANT_0  1 // invalid 
 ^
In file included from /opt/local/avr/include/avr/io.h:164:0,
                 from ../../../src/platform/firefly3/include/include.h:76,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from ../../../projects/dicio/utility/type_defs.h:13,
                 from ../../../projects/dicio/utility/adc.h:12,
                 from ../../../projects/dicio/utility/adc.c:9:
/opt/local/avr/include/avr/iom128rfa1.h:4152:0: note: this is the location of the previous definition
 #define ANT_0                           2
 ^
In file included from ../../../src/platform/include/ulib.h:32:0,
                 from ../../../src/kernel/include/nrk_time.h:33,
                 from ../../../src/kernel/include/nrk.h:38,
                 from ../../../projects/dicio/utility/type_defs.h:13,
                 from ../../../projects/dicio/utility/adc.h:12,
                 from ../../../projects/dicio/utility/adc.c:9:
../../../src/platform/firefly3/include/nrk_pin_define.h:127:0: warning: "ANT_1" redefined
 #define ANT_1  2 // invalid 
 ^
In file included from /opt/local/avr/include/avr/io.h:164:0,
                 from ../../../src/platform/firefly3/include/include.h:76,
                 from ../../../src/kernel/include/nrk_time.h:32,
                 from ../../../src/kernel/include/nrk.h:38,
                 from ../../../projects/dicio/utility/type_defs.h:13,
                 from ../../../projects/dicio/utility/adc.h:12,
                 from ../../../projects/dicio/utility/adc.c:9:
/opt/local/avr/include/avr/iom128rfa1.h:4151:0: note: this is the location of the previous definition
 #define ANT_1                           1
 ^
../../../projects/dicio/utility/adc.c:11:9: error: conflicting types for ‘transform_temp’
 int16_t transform_temp(uint16_t temp_counts) {
         ^
In file included from ../../../projects/dicio/utility/adc.c:9:0:
../../../projects/dicio/utility/adc.h:20:10: note: previous declaration of ‘transform_temp’ was here
 uint16_t transform_temp(uint16_t tempCounts);
          ^
make: *** [../../../projects/dicio/utility/adc.o] Error 1
